--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       - "8501:8501"  # Only if using Streamlit or a web app
     volumes:
       - .:/app
+      - ./embeddings:/app/embeddings
     stdin_open: true
     tty: true
